--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,18 +1,133 @@
 
-  @import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Raleway|Raleway+Dots|Abril+Fatface|');
   /* font-family: 'Montserrat', sans-serif; */
 
 body {
   margin: 0 auto;
-  font-family: 'Montserrat:400', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: extra-light;
+  background-color: black;
+  color: white;
+
+}
+/* Navigation */
+nav {
+  display: flex;
+  background-color: #FF5D73;
 }
 
+div.nav_margin {
+  margin: 0 auto;
+  text-align: center;
+  font-family: 'Raleway', cursive;
+  padding: 1em;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0px 2em;
+  padding: 10px 10px;
+  position: relative;
+  z-index: 0;
+  cursor: pointer;
+}
+
+div.pullUpDown a:before, div.pullUpDown a:after
+{
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0px;
+    content: '';
+    background: #FFF;
+    opacity: 0.3;
+    transition: all 0.3s;
+}
+
+div.pullUpDown a:before
+{
+    top: 0px;
+}
+
+div.pullUpDown a:after
+{
+    bottom: 0px;
+}
+
+div.pullUpDown a:hover:before, div.pullUpDown a:hover:after
+{
+    height: 100%;
+}
+
+/* Homepage */
+body.home-page {
+  background: url("../images/giphy-wall.gif") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+div.home-page {
+  margin: 0 10em;
+}
+
+span#home-He, span#home-llo {
+  font-family: 'Abril Fatface', cursive;
+  font-size: 16vw;
+  color: #FF5D73;
+}
+
+div.hello {
+  margin-top: 10vw;
+  text-align: right;
+  line-height: 7vw;
+  margin-bottom: 0;
+
+}
+
+span#home-He {
+  margin-right: 5vw;
+}
+
+div.home-name {
+  font-size: 3.5vw;
+  font-family: 'Raleway', sans-serif;
+  font-weight: light;
+  color: #42FC96;
+  letter-spacing: 2px;
+  line-height: 5vw;
+  top: 100;
+}
+
+span#home-web-dev {
+  color: white;
+  font-size: 3vw;
+  margin-top: 1em;
+  padding: 0.2em 1em 0.2em 0.5em;
+  background: rgba(	66, 252, 150, 0.5);
+  text-align: left;
+}
+
+span#home-cx-ux {
+  font-size: 3vw;
+}
+span#my-portfolio {
+  color: white;
+  font-size: 1.5vw;
+  border: 1px solid white;
+  border-radius: 80px;
+  padding: 0.5em 1em 0.5em 1em;
+  margin-top: 0;
+}
+
+
+
+
+/* Contact Me */
 img#profile_pic {
   border: 1px solid white;
   border-radius: 50%
-}
-
-main {
-  color: black
 }
