--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,11 +4,14 @@
 
 body {
   margin: 0 auto;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', cursive;
   font-size: extra-light;
   background-color: black;
   color: white;
+}
 
+a {
+  text-decoration: none;
 }
 /* Navigation */
 nav {
@@ -23,7 +26,7 @@ div.nav_margin {
   padding: 1em;
 }
 
-a {
+nav a {
   color: white;
   text-decoration: none;
   display: inline-block;
@@ -61,50 +64,70 @@ div.pullUpDown a:hover:before, div.pullUpDown a:hover:after
     height: 100%;
 }
 
+/* CONTAINER */
+div.container {
+  margin: 0 auto;
+  max-width: 90%;
+
+}
+
 /* Homepage */
 body.home-page {
-  background: url("../images/giphy-wall.gif") no-repeat center center fixed;
+  /* background: url("../images/giphy-wall.gif") no-repeat center center fixed; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  /* background-size: cover; */
 }
 
 div.home-page {
   margin: 0 10em;
 }
 
+div#canvas {
+  width: windowWidth;
+  height: windowHeight;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
 span#home-He, span#home-llo {
   font-family: 'Abril Fatface', cursive;
-  font-size: 16vw;
+  font-size: 14vw;
   color: #FF5D73;
 }
 
 div.hello {
-  margin-top: 10vw;
+  margin-top: 8vw;
   text-align: right;
   line-height: 7vw;
   margin-bottom: 0;
-
 }
 
 span#home-He {
   margin-right: 5vw;
 }
 
+span#home-llo {
+  margin-bottom: 0;
+}
+
 div.home-name {
-  font-size: 3.5vw;
+  font-size: 3vw;
   font-family: 'Raleway', sans-serif;
   font-weight: light;
   color: #42FC96;
   letter-spacing: 2px;
-  line-height: 5vw;
-  top: 100;
+  line-height: 4vw;
 }
 
 span#home-web-dev {
   color: white;
-  font-size: 3vw;
+  font-size: 2.5vw;
   margin-top: 1em;
   padding: 0.2em 1em 0.2em 0.5em;
   background: rgba(	66, 252, 150, 0.5);
@@ -112,22 +135,45 @@ span#home-web-dev {
 }
 
 span#home-cx-ux {
-  font-size: 3vw;
+  font-size: 2.5vw;
+  margin-bottom: 0;
 }
-span#my-portfolio {
+
+.class-bottom {
+  display: inline-flex;
+}
+
+a#my-portfolio {
   color: white;
-  font-size: 1.5vw;
+  font-size: 1.2vw;
   border: 1px solid white;
   border-radius: 80px;
   padding: 0.5em 1em 0.5em 1em;
   margin-top: 0;
 }
 
+.contact-icon{
+  width: 30px;
+  float: right;
+  padding-left: 2vw;
+  opacity: 0.5;
+}
 
+.contact-icon:hover {
+  opacity: 1;
 
+}
 
-/* Contact Me */
+/* WORK  */
 img#profile_pic {
-  border: 1px solid white;
+  border
+}
+
+
+/* ABOUT ME */
+img#profile_pic {
+  border: 5px solid #FF5D73;
+  max-width: 200px;
   border-radius: 50%
+
 }
