--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -209,19 +209,26 @@ hr {
 .pop-a{
   color: white;
 }
+h3 {
+  font-family: 'Abril Fatface', cursive;
+  color: #FF5D73;
+  font-size: 2vw;
+  font-style: bold;
+  font-weight: black !important;
+}
 
-.yourModalClass {
-  background-color: #e95546;
-  border: 1px solid #fc6d58;
+.modal-popup-box {
+  /* background-color: #42FC96; */
+  background-color: #fff;
+  border: 5px solid #42FC96;
   padding: 0 1.5em 1em;
-  border-radius: 5px;
-  max-width: 380px;
-  color:#fff;
+  border-radius: 10px;
+  max-width: 50vw;
+  color:#000;
 }
 
 .project-img-div{
   position:relative;
-
   /* text-align: center; */
 }
 
@@ -230,16 +237,60 @@ hr {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
 }
 
 .pop-a {
   background-color: white;
   opacity: 0;
   padding: 10vw 20vw 10vw;
-
 }
 
+
+.code {
+  font-family: 'Inconsolata', monospace;
+  display: inline !important;
+  color: #000 !important;
+  padding:0 !important; margin:0 !important;
+}
+.code:hover {
+  color: #42FC96 !important;
+}
+
+
+.popup-li{
+  margin: 8px 0;
+}
+/* close-popup */
+.popup-close{
+  left: -8px !important;
+  top: 5px;
+  padding: 0px !important;
+}
+
+.popup-close {
+  float: right;
+  margin-top: -10px;
+  margin-right: -16px;
+  z-index: 30 !important;
+  background-color: #b8b8b8;
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+  -webkit-transition: .2s all ease-out;
+  -moz-transition: .2s all ease-out;
+  transition: .2s all ease-out;
+}
+.popup-close:hover{
+  background-color: #FF5D73;
+  opacity: 0.8;
+}
+.cross {
+  margin-left: 4px;
+  margin-top: 4px;
+  width: 20px;
+  height: 20px;
+  fill: #fff;
+}
 /* Izimodal */
 /* .button {
   display: inline-block;
@@ -274,7 +325,7 @@ p {
 #a{
   font-size: 1.5vw;
   color: #FF5D73;
-  text-shadow: #42FC96 2px 2px 10px;
+  text-shadow: #FF5D73 2px 2px 10px;
 }
 
 #b {
