--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -153,6 +153,11 @@ a#my-portfolio {
   margin-top: 0;
 }
 
+a#my-portfoli:hover {
+  background-color: #FF5D73;
+  color: #000;
+}
+
 .contact-icon{
   width: 30px;
   float: right;
@@ -162,7 +167,6 @@ a#my-portfolio {
 
 .contact-icon:hover {
   opacity: 1;
-
 }
 
 /* WORK  */
@@ -180,14 +184,23 @@ h2 {
   font-size: 3vw;
 }
 
+.animated {
+  animation-duration: 2.5s;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
+}
 
-hr {
-  display: block;
-  height: 5px;
-  border: 0;
-  border-top: 1px solid white;
-  margin: 3vw 0;
-  padding: 0;
+@keyframes bounce2 {
+  0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+  40% {transform: translateY(-30px);}
+  60% {transform: translateY(-15px);}
+}
+.bounce2 {
+  animation-name: bounce;
+}
+
+#ux-projects{
+  margin-top: 10vw;
 }
 
 .wrapper {
@@ -212,9 +225,21 @@ hr {
 h3 {
   font-family: 'Abril Fatface', cursive;
   color: #FF5D73;
-  font-size: 2vw;
+  font-size: 3vw;
   font-style: bold;
   font-weight: black !important;
+}
+
+#intro-p {
+  letter-spacing: 3px;
+  margin-left: 8vw;
+  margin-right: 8vw;
+  line-height: 2vw;
+}
+
+div.intro-div2  {
+  width: 80%;
+  background-color: pink;
 }
 
 .modal-popup-box {
@@ -362,21 +387,16 @@ a#project-link:hover span#b {
 
 }
 
-.wrapper-me-bottom {
-  display: grid;
-  grid-template-columns: 5fr 5fr;
-  grid-column-gap: 3em;
-  margin-top: 3em;
-}
 
 .wrapper-me-skills {
   display: grid;
-  grid-template-rows: 1fr 8fr;
+  grid-template-rows: 2fr 6fr;
+  margin-top: 5vw;
 }
 
 .wrapper-skillsset {
   display: grid;
-  grid-template-columns: 5fr 5fr;
+  grid-template-columns: 3fr 3fr 3fr;
   grid-column-gap: 3em;
 }
 
@@ -410,6 +430,9 @@ img#profile_pic {
 .scroll-icon{
   width: 3vw;
 }
+.scroll-icon2{
+  width: 3vw;
+}
 
 .bounce {
   -moz-animation: bounce 2s infinite;
@@ -437,6 +460,10 @@ img#profile_pic {
   text-align: center;
 }
 
+hr {
+  border: 1px solid #FF5D73;
+}
+
 h4 {
   font-family: 'Abril Fatface', cursive;
   font-size: 2vw;
@@ -447,4 +474,28 @@ h4 {
 
 #skills-ul li {
   list-style:none;
+  margin: 10px;
+  letter-spacing: 2px;
+}
+
+#adventure-h3 {
+  margin-top: 5vw;
+}
+
+#adventure-p {
+  font-size: 1.8vw;
+}
+
+.ad-pic {
+  width: 30vw;
+  border-radius: 10px;
+  border: 5px solid white;
+  margin-bottom: 3vw;
+}
+
+.ad-pic2 {
+  width: 25vw;
+  border-radius: 10px;
+  border: 5px solid white;
+  margin-bottom: 3vw;
 }
