--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -172,7 +172,7 @@ a#my-portfoli:hover {
 /* WORK  */
 h1 {
   font-family: 'Abril Fatface', cursive;
-  font-size: 5vw;
+  font-size: 40px;
   color: #42FC96;
   margin-top: 2vw;
   margin-bottom: 1vw;
@@ -225,7 +225,7 @@ h2 {
 h3 {
   font-family: 'Abril Fatface', cursive;
   color: #FF5D73;
-  font-size: 3vw;
+  font-size: 40px;
   font-style: bold;
   font-weight: black !important;
 }
@@ -234,7 +234,7 @@ h3 {
   letter-spacing: 3px;
   margin-left: 8vw;
   margin-right: 8vw;
-  line-height: 2vw;
+  line-height: 30px;
 }
 
 div.intro-div2  {
@@ -348,13 +348,13 @@ p {
 }
 
 #a{
-  font-size: 1.5vw;
+  font-size: 25px;
   color: #FF5D73;
   text-shadow: #FF5D73 2px 2px 10px;
 }
 
 #b {
-  font-size: 1.5vw;
+  font-size: 25px;
   color: #42FC96;
   text-shadow: #42FC96 2px 2px 10px;
 }
@@ -422,7 +422,7 @@ a#project-link:hover span#b {
 
 img#profile_pic {
   border: 5px solid #FF5D73;
-  max-width: 200px;
+  max-width: 25vw;
   border-radius: 50%;
   margin-top: 3vw;
 }
@@ -466,7 +466,7 @@ hr {
 
 h4 {
   font-family: 'Abril Fatface', cursive;
-  font-size: 2vw;
+  font-size: 30px;
   color: #42FC96;
   margin-left: 2.5vw;
   margin-bottom: 2vw;
@@ -474,7 +474,7 @@ h4 {
 
 #skills-ul li {
   list-style:none;
-  margin: 10px;
+  margin: 20px;
   letter-spacing: 2px;
 }
 
