--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,7 +4,11 @@
 @import url('https://fonts.googleapis.com/css?family=Cabin|Monoton|Paytone+One|Aldrich|Cabin+Sketch');
   /* font-family: 'Montserrat', sans-serif; */
 
-
+html, body {
+    width:  100%;
+    height: 100%;
+    margin: 0px;
+  }
 
 body {
   margin: 0 auto;
@@ -90,11 +94,12 @@ div.home-page {
 div#canvas {
   width: windowWidth;
   height: windowHeight;
+  margin: 0px;
+
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+
   z-index: -1;
 }
 
@@ -546,6 +551,34 @@ h4 {
   margin-bottom: 3vw;
 }
 
+@media only screen and (max-width: 780px)   {
+  .wrapper-me-skills {
+    display: block;
+    width: 100%;
+  }
+  .wrapper-skillsset{
+    display: block;
+    width: 100%;
+  }
+
+  .wrapper {
+    display: block;
+    width: 100%;
+  }
+
+  .project-pic {
+    width: 80%;
+    height: 40%;
+    margin-top: 2em;
+  }
+
+  .project-name {
+    font-size: 1.8em;
+  }
+
+
+}
+
 
 /* responsive web */
 @media only screen and (max-width: 600px)   {
@@ -615,6 +648,23 @@ h4 {
     margin-top: 6em;
   }
 
+/* about me */
+
+.wrapper-me-skills {
+  display: block;
+  width: 100%;
+}
+.wrapper-skillsset{
+  display: block;
+  width: 100%;
+}
+
+.ad-pic {
+  width: 80%;
+}
+.ad-pic2 {
+  width: 90%;
+}
 
 }
 
