--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -484,9 +484,9 @@ a#project-link:hover span#b {
 }
 
 
-img#profile_pic {
+#profile_pic {
   border: 5px solid #FF5D73;
-  max-width: 25vw;
+  max-width: 20vw;
   border-radius: 50%;
   margin-top: 3vw;
 }
