--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -254,12 +254,12 @@ h3 {
   font-weight: bold;
 }
 
-div.intro-div2  {
-  width: 80%;
-  background-color: pink;
+.intro-div  {
+  margin-bottom: 4em;
 }
 
 #intro-p {
+  margin-top: 5em;
   line-height: 2em;
 }
 
@@ -459,8 +459,8 @@ a#project-link:hover span#b {
 
 .wrapper-me-skills {
   display: grid;
-  grid-template-rows: 2fr 6fr;
-  margin-top: 5vw;
+  grid-template-rows: 1fr 5fr;
+  margin-top: 3vw;
 }
 
 
@@ -495,6 +495,9 @@ a#project-link:hover span#b {
   width: 3vw;
 }
 .scroll-icon2{
+  width: 3vw;
+}
+.scroll-icon3{
   width: 3vw;
 }
 
